--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,9 @@
 <resources>
-    <string name="app_name">ClswWearOsGpsMemo2022</string>
-    <!--
-    This string is used for square devices and overridden by hello_world in
-    values-round/strings.xml for round devices.
-    -->
-    <string name="hello_world">Hello Square World!</string>
+    <string name="app_name">GPS Memo</string>
 
     <string name="latitude_format">Lat=%1$f</string>
     <string name="longitude_format">Lon=%1$f</string>
     <string name="timestamp_format">[ %1$d ] : %2$s</string>
+    <string name="no_gps_message">No GPS found</string>
 
 </resources>
